# GTA2_RE

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  gen vs.bat
Doc/: ExceptionAutoSave_gta_all.ct  GTA2_a.CT  GTA2a.CT  Player.PTR  Player.PTR.results.0  Player.PTR.results.1  Player.PTR.results.2  Player.PTR.results.3  Structure.xlsx  gta_all.ct  Новый текстовый документ.c
binkw32/: binkw32.h  global.h  main.cpp
gta2/: AudioManager.cpp  AudioManager.h  Car.cpp  Car.h  CarDoor.cpp  CarDoor.h  CarEngines.cpp  CarEngines.h  CarSystemManager.cpp  CarSystemManager.h  CarsPrefabs.cpp  CarsPrefabs.h  DMAudio.cpp  DMAudio.h  DebugLogFile.cpp  DebugLogFile.h  DirectX.cpp  DirectX.h  EngineStruct.cpp  EngineStruct.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Gang.h  Gangs.h  General.cpp  General.h  Global.h  HUD.cpp  HUD.h  Keybrd.cpp  Keybrd.h  MapGm.cpp  MapGm.h  MapRelatedStruct.cpp  MapRelatedStruct.h  Menu.cpp  Menu.h  Movie.cpp  (+34 more)
re_file/Ghidra/GTA2.rep/: project.prp  projectState
re_file/Ghidra/GTA2.rep/idata/00/: 00000000.prp  00000001.prp  00000002.prp  00000004.prp  00000005.prp  00000006.prp  00000007.prp  00000008.prp  00000009.prp  0000000a.prp
re_file/Ghidra/GTA2.rep/idata/01/: 00000012.prp
re_file/Ghidra/GTA2.rep/user/: ~index.bak  ~journal.bak
re_file/Ghidra/GTA2.rep/user/00/: 00000000.prp  00000002.prp  00000003.prp  00000004.prp
re_file/Ghidra/GTA2.rep/versioned/00/: 00000000.prp  00000001.prp
